--- a/meta/11-8.md
+++ b/meta/11-8.md
@@ -9,7 +9,7 @@ indicator_sort_order: 11-08-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anteil Heizenergien oder Fernwärme
+computation_units: Anzahl fertiggestellter Wohngebäude
 data_start_values:  # initialize the field to be shown  
  - field: Neue Wohngebäude 
    value: gesamt 
@@ -28,7 +28,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl fertiggestellter Wohngebäude mit erneuerbarer Heizenergie sowie Fernwärme
 
 SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=31121-012r&bypass=true&levelindex=1&levelid=1723470904542#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
 source_earliest_available_1: 2019
@@ -41,7 +41,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Dieser Indikator zeigt die Anzahl der fertiggestellten Wohngebäude an, die primär mit erneuerbaren Heizenergien oder Fernwärme beheizt werden. Zu erneuerbaren Heizenergien werden neben der Berücksichtigung der Fernwärme Geothermie, Umweltthermie (Luft / Wasser), Solarthermie, Holz und sonstige Biomasse gezählt. Der Anteil hat sich im Vergleich zu 2019 mit einem Anteil von 54 % deutlich gesteigert. 2023 lag der Anteil bei über 84 % fertiggestellten Wohngebäuden mit primär erneuerbaren Heizenergien. <br>
+Dieser Indikator zeigt die Anzahl der fertiggestellten Wohngebäude an, die primär mit erneuerbaren Heizenergien sowie Fernwärme beheizt werden. Zu erneuerbaren Heizenergien werden neben der Berücksichtigung der Fernwärme Geothermie, Umweltthermie (Luft / Wasser), Solarthermie, Holz und sonstige Biomasse gezählt. Der Anteil hat sich im Vergleich zu 2019 mit einem Anteil von 54 % deutlich gesteigert. 2023 lag der Anteil bei über 84 % fertiggestellten Wohngebäuden mit primär erneuerbaren Heizenergien. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N3.3: Förderung von nachhaltigem Bauen und vermehrte Nutzung von Leerständen und Baulücken, Erhöhung der Sanierungsquote<br>
