--- a/meta/10-1.md
+++ b/meta/10-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 10-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anteil der Schüler/-innen an Sonderpädagogischen Förderzentren in Prozent 
+computation_units: Prozent 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,9 +18,9 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anteil der Schüler/-innen an Sonderpädagogischen Förderzentren in Prozent
 
-SOURCE_TYPE: Schulverwaltungsamt Ingolstadt, "KSS-Monitoring (Kommunale Schulstatistik), Berechnung nach Schuljahren jeweils zum 01.10. d. jew. Schuljahrs"  # data source  
+SOURCE_TYPE: <a href="https://www.statistik.bayern.de/statistik/bildung_soziales/schulen/index.html">KSS-Monitoring (Kommunale Schulstatistik)</a>, Berechnung nach Schuljahren jeweils zum 01.10. d. jew. Schuljahrs"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
