--- a/meta/11-3.md
+++ b/meta/11-3.md
@@ -31,9 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der barrierefreien Wohnungen der Gemeinnützige Wohnungsbausgesellschaft (GWG) / Jahr im Verhältnis zu den Wohnungen stadtweit in Ingolstadt.<br>
-<br>
-Dieser Indikator stellt dar, welchen Anteil die GWG gesamtstädtisch an den fertiggestellten Wohnungen hat. Sie gibt keinen Aufschluss darüber, wie viele barriererfreie Wohnungen in Ingolstadt insgesamt fertiggestellt werden.<br>
+Dieser Indikator stellt dar, welchen Anteil die GWG gesamtstädtisch an den Wohnungen hat. Er gibt keinen Aufschluss darüber, wie viele barriererfreie Wohnungen in Ingolstadt insgesamt existieren.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.1: N3.1: Schaffung von bezahlbarem und barrierefreiem Wohnraum unter Berücksichtigung der Ressourcenschonung<br>
