--- a/meta/7-3.md
+++ b/meta/7-3.md
@@ -18,6 +18,8 @@ data_start_values:  # initialize the field to be shown
  - field: Sektoren 
    value: GHD
  - field: Sektoren 
+   value: GHD - Stadtverwaltung Ingolstadt
+ - field: Sektoren 
    value: Verkehr 
  - field: Sektoren 
    value: Gesamtemissionen
@@ -40,7 +42,7 @@ reporting_status: complete
 Die CO2-Emissionen sind als CO2-Äquivalente (CO2e) angegeben und umfassen dementsprechend auch alle weiteren Treibhausgase neben CO2. <br>
 Die CO2-Bilanz wird momentan alle 2 Jahre aktualisiert, da auf dieser Ebene jährlich zu kleinteilig ist, um eine wirkliche Entwicklung feststellen zu können und der Erhebungsaufwand dementsprechend hoch. Die nächste Bilanz wird daher gegen Mitte 2025 mit den Daten von 2023 vorliegen. <br>
 <br>
-<b>Erläuterung: GHD-Emissionen sind alle Emissionen des Sektor Gewerbe, Handel, Dienstleistungen und übrige Verbraucher</b><br>
+<b>Erläuterung: GHD-Emissionen sind alle Emissionen des Sektor Gewerbe, Handel, Dienstleistungen und übrige Verbraucher. Die Stadtverwaltung Ingolstadt zählt ebenfalls zum Sektor GHD, wird in dieser Grafik aber nochmal separat aufgeführt.</b><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K1.1: Reduktion von Treibhausgasemissionen: klimaneutral stadtweit bis 2035<br>
