--- a/meta/12-2.md
+++ b/meta/12-2.md
@@ -9,19 +9,17 @@ indicator_sort_order: 12-02-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl nachhaltige Kitas
+computation_units: Anzahl Zertifizierung
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Zertifizierung 
+   value: Eine-Welt-KiTa 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
 SOURCE_TYPE: Amt für Kinderbetreuung und vorschulische Bildung  # data source  
-source_earliest_available_1: 2019
+source_earliest_available_1: 2023
 source_periodicity_1: Jährlich
 
 language: de   
@@ -31,7 +29,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Nur städtische Kitas bei Zertifizierung berücksichtigt. Aktuell ist keine städtische Kita als sogenannte FairTrade-Kita zertifiziert. Dennoch haben alle Kitas die Nachhaltigkeit im Blick und weisen mindestens 3 Faktoren, die für eine Faire Kita wichtig sind, z.B. nachhaltiges und inklusives Spielzeug, kein Einmalgeschirr, Bezug von Fair Trade zertifizierten Produkten etc., auf. Es wurde 2022 der Vorstoß unternommen, die Zertifizierungen umzusetzen. Diese ist für 2023 vorgesehen. <br>
+Nur städtische Kitas bei Zertifizierung berücksichtigt. Seit 2024 ist eine städtische Kita als sogenannte Eine-Welt-KiTa zertifiziert. Dennoch haben alle KiTas in Ingolstadt die Nachhaltigkeit im Blick und weisen mindestens 3 Faktoren auf, die für eine Eine-Welt-KiTa wichtig sind, z.B. nachhaltiges und inklusives Spielzeug, kein Einmalgeschirr, Bezug von Fair Trade zertifizierten Produkten etc., auf. Es wurde 2022 der Vorstoß unternommen, die Zertifizierungen umzusetzen. 2024 konnte die KiTa Rappelkiste zertifiziert werden (<a href="https://www.ingolstadt.de/Leben/Kinder-Jugend-Familie/Kinderbetreuung/Kitas-der-Stadt-Ingolstadt/Erste-faire-Kita-in-Ingolstadt.php?object=tx,2789.5&ModID=7&FID=3052.19884.1&NavID=2789.483&La=1">Quelle: Pressemeldung vom 04.04.2024</a>). <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.1: Verankerung der Bildung für nachhaltige Entwicklung (BNE) in schulischen, außerschulischen und informellen Bildungsangeboten<br>
