--- a/meta/11-12.md
+++ b/meta/11-12.md
@@ -11,12 +11,10 @@ graph_type: bar  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: km² 
 data_start_values:  # initialize the field to be shown
- - field: Lärmbelastete Fläche (km²) 
-   value: >55 dB 
- - field: Lärmbelastete Fläche (km²) 
-   value: >65 dB 
- - field: Lärmbelastete Fläche (km²) 
-   value: >75 dB
+ - field: Region 
+   value: Ingolstadt 
+ - field: Region 
+   value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
