--- a/meta/11-12.md
+++ b/meta/11-12.md
@@ -35,7 +35,7 @@ Im Rahmen der Lärmaktionsplanung wurden die Daten zur von Umgebungslärm belast
 <br>
 Werte über 55 dB entsprechen einer hohen Belastung. Werte darüber hinaus überschreiten die Anhaltswerte bzw. stellen eine sehr hohe Belastung sowie eine Gesundheitsgefährdung dar.<br>
 <br>
-Weitere Informationen zur Anzahl der von Umgebungslärm ausgesetzt Personen in Ingolstadt und die Zusammensetzung der Lärmindizes finden Sie auf der Seite der Lärmaktionsplanung im <a href="file://fileserver_01/direktorium/home/kevin.cordshagen/Downloads/L%C3%A4rmaktionsplan_2023_-_Kurzbericht.PDF">Kurzbericht</a>.<br>
+Weitere Informationen zur Anzahl der von Umgebungslärm ausgesetzt Personen in Ingolstadt und die Zusammensetzung der Lärmindizes finden Sie auf der Seite der Lärmaktionsplanung <a href="https://www.ingolstadt.de/laermaktionsplan">Lärmaktionsplan der Stadt Ingolstadt</a> im Kurzbericht.<br>
 <br>
 Auf Grundlage dieser Berechnungen werden in den folgenden Jahren Maßnahmen zur Reduzierung der lärmbelasteten Fläche und Personen umgesetzt.<br> 
 <br>
