--- a/meta/11-12.md
+++ b/meta/11-12.md
@@ -33,13 +33,13 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Im Rahmen der Lärmaktionsplanung wurden die Daten zur von Umgebungslärm belasteten Flächen 2020 aktualisiert und bilden Schätzungen ab. Die Lautstärke wird in Dezibel (dB) Die Aktionsplanung erfolgt auf Grundlage der EU-Umgebungslärmrichtlinie 2002/49/EG und deren nationaler Umsetzung in §§ 47a-f BImSchG sowie Art. 2 Abs. 3 und Art. 4 Satz 2 BayImSchG.<br>
+Im Rahmen der Lärmaktionsplanung wurden die Daten zur von Umgebungslärm belasteten Flächen 2020 aktualisiert und bilden Schätzungen ab. Die Lautstärke wird in Dezibel (dB) angegeben. Die Aktionsplanung erfolgt auf Grundlage der EU-Umgebungslärmrichtlinie 2002/49/EG und deren nationaler Umsetzung in §§ 47a-f BImSchG sowie Art. 2 Abs. 3 und Art. 4 Satz 2 BayImSchG.<br>
 <br>
 Werte über 55 dB entsprechen einer hohen Belastung. Werte darüber hinaus überschreiten die Anhaltswerte bzw. stellen eine sehr hohe Belastung sowie eine Gesundheitsgefährdung dar.<br>
 <br>
-Weitere Informationen zur Anzahl der von Umgebungslärm ausgesetzt Personen in Ingolstadt und die Zusammensetzung der Lärmindizes finden Sie auf der Seite der Lärmaktionsplanung <a href="https://www.ingolstadt.de/laermaktionsplan">Lärmaktionsplan der Stadt Ingolstadt</a> im Kurzbericht.<br>
+Weitere Informationen zur Anzahl der von Umgebungslärm ausgesetzten Personen in Ingolstadt und die Zusammensetzung der Lärmindizes finden Sie auf der Seite der <a href="https://www.ingolstadt.de/laermaktionsplan">Lärmaktionsplanung der Stadt Ingolstadt</a> im Kurzbericht.<br>
 <br>
-Auf Grundlage dieser Berechnungen werden in den folgenden Jahren Maßnahmen zur Reduzierung der lärmbelasteten Fläche und Personen umgesetzt.<br> 
+Auf Grundlage dieser Berechnungen werden in den folgenden Jahren Maßnahmen zur Reduzierung der lärmbelasteten Fläche und Personen umgesetzt. Weitere Informationen hierzu finden Sie ebenfalls auf der Seite der Stadt Ingolstadt<br> 
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächen-bedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
