--- a/meta/10-2.md
+++ b/meta/10-2.md
@@ -45,7 +45,7 @@ reporting_status: complete
 ---
 Ende 2022 wurde die Antidiskriminierungsstelle der Stadt Ingolstadt eingerichtet. Daher sind aus dem Jahr 2022 erst Daten ab Oktober vorhanden, sodass diese hier nicht aufgeführt werden.<br>
 <br>
-Über die Antidiskriminierungsstelle können Diskrminierungen online und vetraulich gemeldet werden. Sie unterstützt zudem und prüft gemeinsam mit den Betroffenen Lösungsmöglichkeiten. Mehr Informationen auf der Seite der <a href="https://www.ingolstadt.de/Leben/Diversit%C3%A4t/Antidiskriminierungsstelle/">Antidiskriminierungsstelle der Stadt Ingolstadt</a>.<br>
+Über die Antidiskriminierungsstelle können Diskriminierungen online und vetraulich gemeldet werden. Sie unterstützt zudem und prüft gemeinsam mit den Betroffenen Lösungsmöglichkeiten. Mehr Informationen auf der Seite der <a href="https://www.ingolstadt.de/Leben/Diversit%C3%A4t/Antidiskriminierungsstelle/">Antidiskriminierungsstelle der Stadt Ingolstadt</a>.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.1: Abbau von Ungleichheiten zwischen Stadtteilen und Bevölkerungsschichten<br>
