--- a/meta/6-3.md
+++ b/meta/6-3.md
@@ -7,20 +7,22 @@ indicator_sort_order: 06-03-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anteil der Messstellen, an denen der Schwellenwert von 50 mg Nitrat pro Liter überschritten wird
+computation_units: mg/l
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
  - field: Region 
-   value: Bayern 
+   value: Neuburg-Schrobenhausen
+ - field: Region 
+   value: Eichstätt  
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Nitrat in mg/l
 
-SOURCE_TYPE:  <a href= "https://www.gkd.bayern.de/de/grundwasser/chemie">LfU</a>  # data source  
+SOURCE_TYPE: <a href= "https://www.gkd.bayern.de/de/grundwasser/chemie">Bayerisches Landesamt für Umwelt</a>  # data source  
  
 source_earliest_available_1: 2021
 source_periodicity_1: Jährlich
@@ -32,14 +34,13 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Nitrat im Grundwasser: Anteil der Messstellen, an denen der Schwellenwert von 50 mg Nitrat pro Liter überschritten wird. <br>
-Berücksichtigte Messstellen und jeweilige Werte: <br>
-
+Im Stadtgebiet Ingolstadt existiert eine Messstelle die u.a. auch den Nitratwert in mg/l angibt. Diese Daten sind seit 2021 vorhanden. Die am nächsten gelegenen Messstellen des EU-Nitratmessnetzes liegen in Kösching im Landkreis Eichstätt und in Weichering im Landkreis Neuburg-Schrobenhause. Bei keiner der Messstellen wurde in der Vergangengeit der EU-weite Grenzwert von 50 mg/l überschritten.<br>
+<br>
 Messstellen-Nr.: 1131723400217 <br>
 Gemeinde: Ingolstadt <br>
 Landkreis: Ingolstadt <br>
 Betreiber: WWA Ingolstadt <br>
-Nitrat (mg/l): 8.1 (Letzter Stand: 3.11.2021)<br>
+Nitrat (mg/l): 2,9 (Letzter Stand: 08.05.2023)<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
