--- a/meta/3-5.md
+++ b/meta/3-5.md
@@ -11,16 +11,18 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: µg / m³
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Luftschadstoff 
+   value: PM10 
+ - field: Luftschadstoff 
+   value: PM2.5
+ - field: Luftschadstoff 
+   value: NO2
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Jahresmittelwert in µg / m³
 
-SOURCE_TYPE: <a href= "https://www.lfu.bayern.de/luft/immissionsmessungen/messwerte/stationen/detail/1409/172">LfU Bayern</a> und <a href= "https://www.umweltbundesamt.de/daten/luft/feinstaub-belastung#feinstaubkonzentrationen-in-deutschland">Umweltbundesamt</a>
+SOURCE_TYPE: <a href= "https://www.lfu.bayern.de/luft/immissionsmessungen/messwerte/stationen/detail/1409/172">Bayerisches Landesamt für Umwelt</a> und <a href= "https://www.umweltbundesamt.de/daten/luft/feinstaub-belastung#feinstaubkonzentrationen-in-deutschland">Umweltbundesamt</a>
 
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
@@ -32,7 +34,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Im Messwertarchiv steht eine umfangreiche Sammlung der kontinuierlich erfassten Luftschadstoffmessdaten des LÜB-Messnetzes seit dem Jahr 1980 in stündlicher zeitlicher Auflösung zum Download zur Verfügung. Das Datenangebot umfasst die Stoffe Stickstoffdioxid, Stickstoffmonoxid, Feinstaub-PM10, Feinstaub-PM2,5, Ozon, Kohlenmonoxid, BTX (Benzol, Toluol und o-Xylol), Schwefeldioxid und Schwefelwasserstoff. Hier wird der Jahresmittelwert des Feinstaub-PM10 an der Messstation Rechbergstraße in Ingolstadt angegeben. Lokal und ausschließlich an vom Verkehr beeinflussten Stationen in Ballungsräumen traten in der Vergangenheit gelegentlich Überschreitungen des für das Kalenderjahr festgelegten Grenzwerts von 40 µg/m³ auf. Seit 2012 wurden keine Überschreitungen dieses Grenzwertes mehr festgestellt.<br>
+Im Messwertarchiv steht eine umfangreiche Sammlung der kontinuierlich erfassten Luftschadstoffmessdaten des Landesüberwachungssystem Bayern (LÜB)-Messnetzes seit dem Jahr 1980 in stündlicher zeitlicher Auflösung zum Download zur Verfügung. Das Datenangebot umfasst die Stoffe Stickstoffdioxid, Stickstoffmonoxid, Feinstaub-PM10, Feinstaub-PM2,5, Ozon, Kohlenmonoxid, BTX (Benzol, Toluol und o-Xylol), Schwefeldioxid und Schwefelwasserstoff. Hier wird der Jahresmittelwert des Feinstaub-PM10, PM2,5 und NO2 an der Messstation Rechbergstraße (bis 2021) und an der Münchener Straße (ab 2022) in Ingolstadt angegeben. Lokal und ausschließlich an vom Verkehr beeinflussten Stationen in Ballungsräumen traten in der Vergangenheit gelegentlich Überschreitungen des für das Kalenderjahr festgelegten Jahresmittelgrenzwerts von 40 µg/m³ (PM10), 25 µg/m³ (PM2,5) und 40 µg/m³ (NO2) auf.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N2.1: Reduzierung der gesundheitlichen physischen und psychischen Belastung und Sicherstellung von ausreichenden Präventions- und Suchtmaßnahmen<br>
