--- a/meta/16-3.md
+++ b/meta/16-3.md
@@ -9,7 +9,7 @@ indicator_sort_order: 16-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Finanzmittelsaldo je 1.000 EW in €
+computation_units: Euro
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,9 +18,9 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: 
+computation_definitions: Finanzmittelsaldo je 1.000 EW in €
 
-SOURCE_TYPE: Kämmerei Ingolstadt  # data source  
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/Rathaus/Verwaltung-Beteiligung/%C3%84mter-Referate/index.php?object=tx%7C2789.1&ModID=9&FID=465.78.1">Kämmerei der Stadt Ingolstadt</a>  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,6 +31,8 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Reduzierung erfolgt aufgrund einer Vielzahl von Gründen, u.a. Verringerung der Steuereinnahmen bei gleichzeitigem Anstieg der Ausgaben. Dazu gehören Sach- und Personalkosten.<br>
+Der Finanzierungssaldo eines Kommunalhaushalts ist die Differenz aus den bereinigten Einnahmen und den bereinigten Ausgaben, ergänzt um den Saldo der haushaltstechnischen Verrechnungen. Ist der Finanzierungssaldo positiv, sind die Einnahmen höher als die Ausgaben, spricht man von einem Finanzierungsüberschuss, sonst von einem Finanzierungsdefizit. Ingolstadt hatte entsprechend in den letzten Jahren einen Finanzierungsüberschuss.
+
+Der Finanzierungssaldo betrachtet nur die Einnahmen und Ausgaben (nicht etwa Erträge und Aufwendungen) und ist demnach eine rein kameralistische Größe. Er wird u.a. für den jährlichen Gemeindefinanzbericht ermittelt. Ein positiver Finanzierungssaldo besagt, dass die Geldzuflüsse im betrachteten Zeitraum größer waren als die Geldabflüsse; er bedeutet nicht notwendig, dass der Haushalt ausgeglichen ist.<br>
 <br>
 <b>BNK-Indikator</b>
