--- a/meta/16-4.md
+++ b/meta/16-4.md
@@ -9,7 +9,7 @@ indicator_sort_order: 16-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Liquiditätskredit 
+computation_units: Euro 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,9 +18,9 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Liquiditätskredit in Euro
 
-SOURCE_TYPE: Kämmerei Ingolstadt  # data source  
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/Rathaus/Verwaltung-Beteiligung/%C3%84mter-Referate/index.php?object=tx%7C2789.1&ModID=9&FID=465.78.1">Kämmerei der Stadt Ingolstadt</a> # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,5 +31,6 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Liquiditätskredite sind Kredite, die die Kommune nur kurzfristig zur Sicherstellung der Liquidität (Zahlungsfähigkeit) aufnimmt, um Aufgaben zeitgerecht leisten zu können. In den vergangenen Jahren war die Aufnahme von Liquiditätskrediten aufgrund einer stabilen Haushaltslage in Ingolstadt nicht erforderlich. Daher ist der Wert in diesem Fall über die letzten Jahre auf null gesetzt.<br>
 <br>
 <b>BNK-Indikator</b>
