--- a/meta/16-3.md
+++ b/meta/16-3.md
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Finanzierungssaldo eines Kommunalhaushalts ist die Differenz aus den bereinigten Einnahmen und den bereinigten Ausgaben, ergänzt um den Saldo der haushaltstechnischen Verrechnungen. Ist der Finanzierungssaldo positiv, sind die Einnahmen höher als die Ausgaben, spricht man von einem Finanzierungsüberschuss, sonst von einem Finanzierungsdefizit. Ingolstadt hatte entsprechend in den letzten Jahren einen Finanzierungsüberschuss.
+Der Finanzierungssaldo eines Kommunalhaushalts ist die Differenz aus den bereinigten Einnahmen und den bereinigten Ausgaben. Der Saldo der haushaltstechnischen Verrechnungen wird hierbei nicht ergänzt. Ist der Finanzierungssaldo positiv, sind die Einnahmen höher als die Ausgaben, spricht man von einem Finanzierungsüberschuss, sonst von einem Finanzierungsdefizit. Ingolstadt hatte entsprechend in den letzten Jahren einen Finanzierungsüberschuss.
 
 Der Finanzierungssaldo betrachtet nur die Einnahmen und Ausgaben (nicht etwa Erträge und Aufwendungen) und ist demnach eine rein kameralistische Größe. Er wird u.a. für den jährlichen Gemeindefinanzbericht ermittelt. Ein positiver Finanzierungssaldo besagt, dass die Geldzuflüsse im betrachteten Zeitraum größer waren als die Geldabflüsse; er bedeutet nicht notwendig, dass der Haushalt ausgeglichen ist.<br>
 <br>
