--- a/meta/16-5.md
+++ b/meta/16-5.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Steuereinnahmen in € je Einwohner/-in
+computation_definitions: Gewerbesteuereinnahmen in € je Einwohner/-in
 
 SOURCE_TYPE: <a href="https://www.ingolstadt.de/Rathaus/Verwaltung-Beteiligung/%C3%84mter-Referate/index.php?object=tx%7C2789.1&ModID=9&FID=465.78.1">Kämmerei der Stadt Ingolstadt</a> # data source  
 source_earliest_available_1: 2019
@@ -31,6 +31,8 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-2020 und 2021 kam es zu deutlichen Einbrüche bei der Gewerbesteuer aufgrund der COVID-19-Pandemie. In den darauf folgenden Jahren konnten wieder mehr Gewerbesteuer eingenommen werden.<br>
+2020 und 2021 kam es zu deutlichen Einbrüche bei der Gewerbesteuer aufgrund der COVID-19-Pandemie. In den darauf folgenden Jahren konnte wieder mehr Gewerbesteuer eingenommen werden.<br>
+<br>
+Die Steuereinnahmen beziehen sich nur auf die Gewerbesteuer. Hierbei werden jedoch auch Grundsteuer-, Einkommenssteuer-, Umsatzsteuer- und Hundesteuereinnahmen mit eingerechnet.
 <br>
 <b>BNK-Indikator</b>
