--- a/meta/11-18.md
+++ b/meta/11-18.md
@@ -7,18 +7,40 @@ indicator_sort_order: 11-18-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Wohnfläche in m² je EW
+computation_units: m²
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Bezirk 
+   value: I Mitte 
+ - field: Bezirk 
+   value: II Nordwest
+ - field: Bezirk 
+   value: III Nordost 
+ - field: Bezirk 
+   value: IV Südost
+ - field: Bezirk 
+   value: V Südwest 
+ - field: Bezirk 
+   value: VI West
+ - field: Bezirk 
+   value: VII Etting
+ - field: Bezirk 
+   value: VIII Oberhaunstadt 
+ - field: Bezirk 
+   value: IX Mailing
+ - field: Bezirk 
+   value: X Süd 
+ - field: Bezirk 
+   value: XI Friedrichshofen-Hollerstauden
+ - field: Bezirk 
+   value: XII Münchener Straße
+ - field: Bezirk 
+   value: Gesamt 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Wohnfläche in m² je EW nach Hauptwohnsitz
 
 SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=31231-003z&bypass=true&levelindex=1&levelid=1680780794247#abreadcrumb"> Bayerisches Landesamt für Statistik</a>  # data source  
 source_earliest_available_1: 2019
@@ -31,9 +53,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die durchschnittliche Wohnfläche pro Person hat in den vergangenenen Jahren immer weiter zugenommen – von 34 m² im Jahr 1990 auf gut 45 m² im Jahr 2021. Allerdings ist dieser Wert in den letzten Jahren langsamer gestiegen. In kleineren Haushalten erhöht sich in der Regel die durchschnittliche Wohnfläche pro Person. Dieser Trend ergibt sich u.a. aus der steigenden Zahl von Einpersonenhaushalten, aber z.B. auch dann, wenn erwachsene Kinder aus dem Haushalt der Eltern ausziehen. <br>
+Die durchschnittliche Wohnfläche pro Person hat in den vergangenenen Jahren immer weiter zugenommen – von 34 m² im Jahr 1990 auf gut 44 m² im Jahr 2023. Allerdings ist dieser Wert in den letzten Jahren langsamer gestiegen. In kleineren Haushalten erhöht sich in der Regel die durchschnittliche Wohnfläche pro Person. Dieser Trend ergibt sich u.a. aus der steigenden Zahl von Einpersonenhaushalten, aber z.B. auch dann, wenn erwachsene Kinder aus dem Haushalt der Eltern ausziehen. Insbesondere in den einzelnen Stadtvierteln ist ein starker Unterschied von bis zu 20 m² / EW festzustellen. Dieser resultiert oftmals daraus, dass in wohlhabenderen Stadtvierteln vermehrt Einfamilienhäuser mit mehr Fläche zur Verfügung stehen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächen-bedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
+N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächenbedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
 <br>
 <b>BNK-Indikator</b>
