--- a/meta/1-6.md
+++ b/meta/1-6.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: 
+computation_definitions: Empfänger/innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber und BaföG-Empfänger) unterteilt nach Frauen / Männern / Menschen mit / ohne Migrationshintergrund
 
 SOURCE_TYPE:  "Amt für Statistik und Stadtforschung"   # data source  
 source_earliest_available_1: 2019
