--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -4,7 +4,7 @@
 1-4-1-title: Kinder unter 15 J. in Grundsicherung (SGB II)
 1-4-2-title: Kinder unter 15 J. in Grundsicherung (SGB II) in %
 1-5-title: Empfänger/-innen von Grundsicherung nach SGB II insgesamt in % der Einwohner/-innen unter 65
-1-6-title: Empfänger/-innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber/-innen und BaföG-Empfänger/-innen) in % der Gesamtbevölkerung
+1-6-title: Empfänger/-innen von sozialer Mindestsicherung insgesamt
 
 2-1-title: Anteil geretteter Lebensmittel
 
