--- a/meta/1-2.md
+++ b/meta/1-2.md
@@ -9,18 +9,18 @@ indicator_sort_order: 01-02-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Empfänger/-innen von Grundsicherung im Alter 
+computation_units: Anzahl Erteilte Wohnberechtigungen und Sozialwohnungsbezug 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Sozial geförderter Wohnraum 
+   value: Erteilte Wohnberechtigungen 
+ - field: Sozial geförderter Wohnraum 
+   value: Sozialwohnungsbezug 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl Erteilte Wohnberechtigungen und Sozialwohnungsbezug
 
-SOURCE_TYPE: "Bayer. Landesamt für Statistik"  # data source  
+SOURCE_TYPE: "Amt für Soziales der Stadt Ingolstadt"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -32,10 +32,13 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 
-Personen, die die Altersgrenze erreicht haben und auf Dauer ihren Lebensunterhalt nicht aus eigenen Einkommen bestreiten können, haben Anspruch auf Leistungen der Grundsicherung im Alter nach dem Vierten Kapitel des Zwölften Buches Sozialgesetzbuch (SGB XII). Gemäß § 41 Abs. 2 SGB XII erreichen Geburtsjahrgänge vor dem 1. Januar 1947 die Altersgrenze mit Vollendung des 65. Lebensjahres. Für die Jahrgänge 1947 bis 1958 erhöht sich diese Altersgrenze je Jahrgang um je einen Monat und für die Jahrgänge 1959 bis 1964 um je zwei Monate. Ab dem Jahrgang 1964 liegt die Altersgrenze somit bei 67 Jahren.<br>
-Vor dem Jahr 1947 geborene Personen erreichten die Altersgrenze mit 65 Jahren; für 1947 und später Geborene wird die Altersgrenze seit dem Jahr 2012 schrittweise auf 67 Jahre angehoben. <br>
+Sozialwohnungen, rechtlich korrekt „öffentlich geförderte Wohnungen“, sind Wohnungen, deren Bau finanziell bezuschusst worden sind. Eine Sozialwohnung ist von der Lage, Ausstattung und Größe erstmal nicht als Solche erkennbar. Lediglich die Miete ist niedriger.<br>
 <br>
-Quelle: <a href="https://www.bmas.de/DE/Soziales/Rente-und-Altersvorsorge/Fakten-zur-Rente/Grundsicherung-im-Alter/grundsicherung-im-alter.html#:~:text=Grundsicherung%20im%20Alter%20erhalten%20alle,Einkommen%20von%20unter%20400%20Euro.">Bundesministerium für Arbeit und Soziales</a><br>
+Mit dem Wohnberechtigungsschein (erteilte Wohnberechtigungen) kann ein Mieter nachweisen, dass er berechtigt ist, eine mit öffentlichen Mitteln geförderte Wohnung zu beziehen. Für besonders einkommensschwache Haushalte wird über den Vormerkbescheid eine geförderte Wohnung vermittelt.<br>
+<br>
+Der Sozialwohnungsbezug bezeichnet den finalen Bezug einer Wohnung nach erfolgreicher Antragstellung.<br>
+<br>
+Quelle: <a href="https://www.ingolstadt.de/wohnberechtigungsschein">Amt für Soziales der Stadt Ingolstadt</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 V1.10: Armutsbekämpfung<br>
