--- a/meta/1-3.md
+++ b/meta/1-3.md
@@ -9,7 +9,7 @@ indicator_sort_order: 01-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Empfänger/-innen von Grundsicherung nach SGB II insgesamt
+computation_units: Euro
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,28 +18,22 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: 
+computation_definitions: Übernahme von Mietrückständen in Euro
 
-SOURCE_TYPE: "Amt für Statistik und Stadtforschung"   # data source  
+SOURCE_TYPE: "Amt für Soziales der Stadt Ingolstadt"   # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Mit dem Begriff Grundsicherung für Arbeitsuchende wird eine staatliche Sozialleistung für arbeitsuchende Menschen bezeichnet. Sie soll ihnen dabei helfen, ihren Lebensunterhalt zu decken, wenn die eigenen Mittel dafür nicht ausreichen.<br>
-<br>
-Wer Grundsicherung für Arbeitsuchende bekommt, wird in eine Regelbedarfsstufe eingruppiert. Diese Einteilung berücksichtigt die persönliche Situation – zum Beispiel, ob eine Person alleinstehend ist oder mit ihrer Familie zusammenlebt und deshalb mehr Unterstützung braucht.<br>
-<br>
-Grundsicherung für Arbeitsuchende können erwerbsfähige Menschen beziehen und nicht erwerbsfähige Personen, die mit erwerbsfähigen in einer sogenannten Bedarfsgemeinschaft leben.<br>
-<br>
-Die Grundsicherung (beziehungsweise Bürgergeld) wird aus Steuermitteln finanziert. Diese Leistung kann beim zuständigen Jobcenter beantragt werden.<br>
-<br>
-Quelle: <a href="https://www.arbeitsagentur.de/lexikon/grundsicherung">Bundesagentur für Arbeit</a><br>
+Bei drohendem Verlust der Wohnung (z. B. bei einer Kündigung, einer drohenden Räumungsklage, nach einem Wohnungsbrand) und erfolgloser Suche nach einer neuen Wohnung, kann die Stadt Ingolstadt verschiedene Hilfestellungen anbieten. Dazu gehört auch die Übernahme von möglichen Mietschulden zum Erhalt der Wohnung.
+
+Weitere Informationen unter <a href="https://www.ingolstadt.de/Leben/Soziales-Wohnen/Wohnen/Wohnungslosigkeit/">Amt für Soziales - Wohnungslosigkeit</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 V1.10: Armutsbekämpfung<br>
