--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -1,8 +1,8 @@
 1-1-title: Anzahl Unterbringung von Obdachlosen
 1-2-title: Vergabe von sozial gefördertem Wohnraum
 1-3-title: Mietschuldenprävention
-1-4-1-title: Kinder unter 15 J. in Grundsicherung (SGB II)
-1-4-2-title: Kinder unter 15 J. in Grundsicherung (SGB II) in %
+1-4-1-title: Empfänger/-innen von Hilfe zum Lebensunterhalt und Grundsicherung (SGB XII)
+1-4-2-title: Empfänger/-innen von Grundsicherung (SGB II)
 1-5-title: Empfänger/-innen von Grundsicherung nach SGB II insgesamt in % der Einwohner/-innen unter 65
 1-6-title: Empfänger/-innen von sozialer Mindestsicherung insgesamt
 
