--- a/meta/1-4-1.md
+++ b/meta/1-4-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 01-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Kinder unter 15 J. in Grundsicherung (SGB II)
+computation_units: Anzahl Empfänger/-innen von Hilfe zum Lebensunterhalt und Grundsicherung (SGB XII)
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,30 +18,24 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Empfänger/-innen von Hilfe zum Lebensunterhalt und Grundsicherung (SGB XII)
 
-SOURCE_TYPE:  "Amt für Statistik und Stadtforschung"  # data source
+SOURCE_TYPE:  "Amt für Soziales der Stadt Ingolstadt"  # data source
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Anzahl von Kindern unter 15 Jahren, die Grundsicherungsleistungen nach dem SGB II in Anspruch nehmen. <br>
+Personen, die die Altersgrenze erreicht haben und auf Dauer ihren Lebensunterhalt nicht aus eigenen Einkommen bestreiten können, haben Anspruch auf Leistungen der Grundsicherung im Alter nach dem Vierten Kapitel des Zwölften Buches Sozialgesetzbuch (SGB XII). Gemäß § 41 Abs. 2 SGB XII erreichen Geburtsjahrgänge vor dem 1. Januar 1947 die Altersgrenze mit Vollendung des 65. Lebensjahres. Für die Jahrgänge 1947 bis 1958 erhöht sich diese Altersgrenze je Jahrgang um je einen Monat und für die Jahrgänge 1959 bis 1964 um je zwei Monate. Ab dem Jahrgang 1964 liegt die Altersgrenze somit bei 67 Jahren.<br>
 <br>
-Mit dem Begriff Grundsicherung für Arbeitsuchende wird eine staatliche Sozialleistung für arbeitsuchende Menschen bezeichnet. Sie soll ihnen dabei helfen, ihren Lebensunterhalt zu decken, wenn die eigenen Mittel dafür nicht ausreichen.<br>
+Vor dem Jahr 1947 geborene Personen erreichten die Altersgrenze mit 65 Jahren; für 1947 und später Geborene wird die Altersgrenze seit dem Jahr 2012 schrittweise auf 67 Jahre angehoben.<br>
 <br>
-Wer Grundsicherung für Arbeitsuchende bekommt, wird in eine Regelbedarfsstufe eingruppiert. Diese Einteilung berücksichtigt die persönliche Situation – zum Beispiel, ob eine Person alleinstehend ist oder mit ihrer Familie zusammenlebt und deshalb mehr Unterstützung braucht.<br>
-<br>
-Grundsicherung für Arbeitsuchende können erwerbsfähige Menschen beziehen und nicht erwerbsfähige Personen, die mit erwerbsfähigen in einer sogenannten Bedarfsgemeinschaft leben.<br>
-<br>
-Die Grundsicherung (beziehungsweise Bürgergeld) wird aus Steuermitteln finanziert. Diese Leistung kann beim zuständigen Jobcenter beantragt werden.<br>
-<br>
-Quelle: <a href="https://www.arbeitsagentur.de/lexikon/grundsicherung">Bundesagentur für Arbeit</a><br>
+Quelle: <a href="https://www.bmas.de/DE/Soziales/Rente-und-Altersvorsorge/Fakten-zur-Rente/Grundsicherung-im-Alter/grundsicherung-im-alter.html#:~:text=Grundsicherung%20im%20Alter%20erhalten%20alle,Einkommen%20von%20unter%20400%20Euro.">Bundesministerium für Arbeit und Soziales</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 V1.10: Armutsbekämpfung<br>
