--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -3,7 +3,7 @@
 1-3-title: Mietschuldenprävention
 1-4-1-title: Empfänger/-innen von Hilfe zum Lebensunterhalt und Grundsicherung (SGB XII)
 1-4-2-title: Empfänger/-innen von Grundsicherung (SGB II)
-1-5-title: Empfänger/-innen von Grundsicherung nach SGB II insgesamt in % der Einwohner/-innen unter 65
+1-5-title: Empfänger/-innen von Erwerbsminderungsrente
 1-6-title: Empfänger/-innen von sozialer Mindestsicherung insgesamt
 
 2-1-title: Anteil geretteter Lebensmittel
