--- a/meta/1-5.md
+++ b/meta/1-5.md
@@ -9,7 +9,7 @@ indicator_sort_order: 01-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Anzahl Empfänger/-innen von Erwerbsminderungsrente 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,30 +18,26 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: 
+computation_definitions: Empfänger/-innen von Erwerbsminderungsrente
 
-SOURCE_TYPE: "Amt für Statistik und Stadtforschung"  # data source  
+SOURCE_TYPE: "Amt für Soziales der Stadt Ingolstadt"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Empfänger/-innen von Grundsicherung nach SGB II insgesamt in % der Einwohner unter 65.<br>
+Die Erwerbsminderungsrente ist eine Rente für Menschen, die wegen Krankheit oder Unfall gar nicht mehr oder nur noch eingeschränkt arbeiten können. Sie soll den Wegfall des Erwerbseinkommens teilweise oder vollständig ausgleichen und einen angemessenen Lebensstandard ermöglichen. Betroffen sind jedes Jahr 170.000 Menschen, die ihren Job vor Erreichen des Rentenalters aufgeben müssen.<br>
 <br>
-Mit dem Begriff Grundsicherung für Arbeitsuchende wird eine staatliche Sozialleistung für arbeitsuchende Menschen bezeichnet. Sie soll ihnen dabei helfen, ihren Lebensunterhalt zu decken, wenn die eigenen Mittel dafür nicht ausreichen.<br>
+Unterschieden wird zwischen einer Rente wegen voller und teilweiser Erwerbsminderung. Vollständig erwerbsunfähig ist, wer für absehbare Zeit nicht in der Lage ist, mehr als drei Stunden täglich einer Arbeit nachzugehen. Teilweise erwerbsgemindert sind Personen, die nicht mehr als sechs Stunden täglich arbeiten können.<br> 
 <br>
-Wer Grundsicherung für Arbeitsuchende bekommt, wird in eine Regelbedarfsstufe eingruppiert. Diese Einteilung berücksichtigt die persönliche Situation – zum Beispiel, ob eine Person alleinstehend ist oder mit ihrer Familie zusammenlebt und deshalb mehr Unterstützung braucht.<br>
+Die Erwerbsminderungsrente dient der Sicherung des Lebensunterhalts für den Zeitraum, in dem eine Person nicht arbeiten kann. Verbessert sich der Zustand so, dass Betroffene wieder ins Arbeitsleben eintreten können, erhalten sie daher keine Leistungen mehr. Man kann also auch aus der Erwerbsminderungsrente wieder in die Erwerbstätigkeit eintreten.<br> 
 <br>
-Grundsicherung für Arbeitsuchende können erwerbsfähige Menschen beziehen und nicht erwerbsfähige Personen, die mit erwerbsfähigen in einer sogenannten Bedarfsgemeinschaft leben.<br>
-<br>
-Die Grundsicherung (beziehungsweise Bürgergeld) wird aus Steuermitteln finanziert. Diese Leistung kann beim zuständigen Jobcenter beantragt werden.<br>
-<br>
-Quelle: <a href="https://www.arbeitsagentur.de/lexikon/grundsicherung">Bundesagentur für Arbeit</a><br>
+Quelle<a href="https://www.bundesregierung.de/breg-de/themen/arbeit-und-soziales/rund-um-die-rente/faq-erwerbsminderungsrenten-2266870">Bundesregierung</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 V1.10: Armutsbekämpfung<br>
