--- a/meta/1-5.md
+++ b/meta/1-5.md
@@ -37,7 +37,7 @@ Unterschieden wird zwischen einer Rente wegen voller und teilweiser Erwerbsminde
 <br>
 Die Erwerbsminderungsrente dient der Sicherung des Lebensunterhalts für den Zeitraum, in dem eine Person nicht arbeiten kann. Verbessert sich der Zustand so, dass Betroffene wieder ins Arbeitsleben eintreten können, erhalten sie daher keine Leistungen mehr. Man kann also auch aus der Erwerbsminderungsrente wieder in die Erwerbstätigkeit eintreten.<br> 
 <br>
-Quelle<a href="https://www.bundesregierung.de/breg-de/themen/arbeit-und-soziales/rund-um-die-rente/faq-erwerbsminderungsrenten-2266870">Bundesregierung</a><br>
+Quelle: <a href="https://www.bundesregierung.de/breg-de/themen/arbeit-und-soziales/rund-um-die-rente/faq-erwerbsminderungsrenten-2266870">Bundesregierung</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 V1.10: Armutsbekämpfung<br>
