--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -5,6 +5,7 @@
 1-4-2-title: Empfänger/-innen von Grundsicherung (SGB II)
 1-5-title: Empfänger/-innen von Erwerbsminderungsrente
 1-6-title: Empfänger/-innen von sozialer Mindestsicherung insgesamt
+1-7-title: Anzahl der Alleinerziehenden
 
 2-1-title: Anteil geretteter Lebensmittel
 
