--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -6,6 +6,7 @@
 1-5-title: Empfänger/-innen von Erwerbsminderungsrente
 1-6-title: Empfänger/-innen von sozialer Mindestsicherung insgesamt
 1-7-title: Anzahl der Alleinerziehenden
+1-8-title: Arbeitslosenquote
 
 2-1-title: Anteil geretteter Lebensmittel
 
