--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -7,6 +7,7 @@
 1-6-title: Empfänger/-innen von sozialer Mindestsicherung insgesamt
 1-7-title: Anzahl der Alleinerziehenden
 1-8-title: Arbeitslosenquote
+1-9-title: Wohngeldempfänger
 
 2-1-title: Anteil geretteter Lebensmittel
 
