--- a/meta/1-9.md
+++ b/meta/1-9.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Arbeitslosenquote bezogen auf alle zivilen Erwerbspersonen
+computation_definitions: Wohngeldempfänger in Ingolstadt
 
 SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=22311-102z&bypass=true&levelindex=1&levelid=1725452932662#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
 source_earliest_available_1: 2019
