--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -19,6 +19,7 @@
 3-6-title: Offene Stellen und Ausbildungen von medizinischem Fachpersonal
 3-7-title: Vorzeitige Sterblickeit
 3-8-title: Wohnungsnahe Grundversorgung - Krankenhaus
+3-9-title: Durchschnittliches Sterbealter
 
 4-1-title: Ausländische Studierende in Ingolstadt
 4-2-title: Aus- und Weiterbildungsangebote für städtische Mitarbeitende
