--- a/meta/3-9.md
+++ b/meta/3-9.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Durchschnittliches Sterbealter nach Geschlecht
 
-SOURCE_TYPE: Gesundheitsamt Ingolstadt  # data source  
+SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=12613-020z&bypass=true&levelindex=1&levelid=1725454432515#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Durchschnittliches Sterbealter nach Geschlecht
 
