--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -20,6 +20,7 @@
 3-7-title: Vorzeitige Sterblickeit
 3-8-title: Wohnungsnahe Grundversorgung - Krankenhaus
 3-9-title: Durchschnittliches Sterbealter
+3-10-title: Bio-Lebensmittelanteil an KiTas und Schulen
 
 4-1-title: Ausländische Studierende in Ingolstadt
 4-2-title: Aus- und Weiterbildungsangebote für städtische Mitarbeitende
