--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -22,6 +22,7 @@
 3-9-title: Durchschnittliches Sterbealter
 3-10-title: Bio-Lebensmittelanteil an KiTas und Schulen
 3-11-title: Durchimpfungsgrad
+3-12-title: Inanspruchname der Früherkennungsmaßnahmen
 
 4-1-title: Ausländische Studierende in Ingolstadt
 4-2-title: Aus- und Weiterbildungsangebote für städtische Mitarbeitende
