--- a/meta/3-11.md
+++ b/meta/3-11.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Durchimpfungsgrad  der Kinder in Ingolstadt vor der Einschulung nach Herkunft (mit / ohne Migrationshintergrund)
 
-SOURCE_TYPE: Amt für Statistik und Stadtforschung in Ingolstadt, Schuleingangsuntersuchung  # data source  
+SOURCE_TYPE: Amt für Statistik und Stadtforschung in Ingolstadt, Schuleingangsuntersuchung des Gesundheitsamts der Stadt Ingolstadt  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: jährlich
 
