--- a/meta/3-12.md
+++ b/meta/3-12.md
@@ -24,7 +24,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anteil der Kinder in Ingolstadt vor der Einschulung nach Geschlecht und Herkunft (mit / ohne Migrationshintergrund) bei denen die Vorsorgeuntersuchungen U1 - U9 vollständig abgeschlossen wurden
 
-SOURCE_TYPE: Amt für Statistik und Stadtforschung in Ingolstadt, Schuleingangsuntersuchung  # data source  
+SOURCE_TYPE: Amt für Statistik und Stadtforschung in Ingolstadt, Schuleingangsuntersuchung des Gesundheitsamts der Stadt Ingolstadt  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: jährlich
 
