--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -23,6 +23,7 @@
 3-10-title: Bio-Lebensmittelanteil an KiTas und Schulen
 3-11-title: Durchimpfungsgrad
 3-12-title: Inanspruchname der Früherkennungsmaßnahmen
+3-13-title: Adipositas
 
 4-1-title: Ausländische Studierende in Ingolstadt
 4-2-title: Aus- und Weiterbildungsangebote für städtische Mitarbeitende
