--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -25,7 +25,7 @@
 3-12-title: Inanspruchname der Früherkennungsmaßnahmen
 3-13-title: Adipositas
 
-4-1-title: Ausländische Studierende in Ingolstadt
+4-1-title: Studierendenanzahl und Anteil ausländischer Studierender
 4-2-title: Aus- und Weiterbildungsangebote für städtische Mitarbeitende
 4-3-title: Betreuung von Kindern in öff. Kita
 4-4-title: Integrative Kindertageseinrichtungen
