--- a/meta/4-1.md
+++ b/meta/4-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 04-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent
+computation_units: Studierendenanzahl und Anteil ausländischer Studierender
 
 data_start_values:  # initialize the field to be shown  
   - field: Einrichtung 
@@ -19,7 +19,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anteil der ausländischen Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) in Prozent
+computation_definitions: Anzahl der Studierenden insgesamt und Anzahl der ausländischen Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU)
 
 SOURCE_TYPE: Technische Hochschule Ingolstadt und Katholische Universität Eichstätt-Ingolstadt jeweils zum 1.12.  # data source  
 source_earliest_available_1: 2019
@@ -32,7 +32,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anteil der ausländischen Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) in Prozent<br>
+Dieser Indikator zeigt die Anzahl der Studierenden insgesamt und Anzahl der ausländischen Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) an. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 B2.4: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
