--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -9,16 +9,18 @@ indicator_sort_order: 04-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Anzahl der Kinder
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Herkunft 
+   value: gesamt 
+ - field: Herkunft
+   value: mit Migrationshintergrund
+ - field: Herkunft
+   value: ohne Migrationshintergrund
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl der Kinder in öff. Kindertageseinrichtungen mit / ohne Migrationshintergrund (zwischen 0 und unter 3 Jahre) in städtischer Trägerschaft
 
 SOURCE_TYPE: <a href= "https://www.regionalstatistik.de/genesis/online?operation=statistic&levelindex=0&levelid=1651215646954&code=22543#abreadcrumb">Bayer. Landesamt für Statistik</a>
 
@@ -32,7 +34,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Prozentualer Anteil der unter drei-jährigen Kindern in öffentlichen Kindertagesstätten. Der Ausbau der Krippenplätze  schreitet voran und in den nächsten Jahren werden weitere Einrichtungen eröffnet. <br>
+Anzahl der Kinder in öff. Kindertageseinrichtungen mit / ohne Migrationshintergrund (zwischen 0 und unter 3 Jahre) in städtischer Trägerschaft. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
