--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -27,7 +27,7 @@
 
 4-1-title: Studierendenanzahl und Anteil ausländischer Studierender
 4-2-title: Aus- und Weiterbildungsangebote für städtische Mitarbeitende
-4-3-title: Betreuung von Kindern in öff. Kita
+4-3-title: Betreuung von Kindern zwischen 0 und 3 Jahre in öff. Kindertageseinrichtungen (städtische Trägerschaft)
 4-4-title: Integrative Kindertageseinrichtungen
 4-5-title: Kinder in öff. Tageseinrichtungen
 4-6-title: Personal in öffentlich geförderter Kindertagespflege
