--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -22,7 +22,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anzahl der Kinder in öff. Kindertageseinrichtungen mit / ohne Migrationshintergrund (zwischen 0 und unter 3 Jahre) in städtischer Trägerschaft
 
-SOURCE_TYPE: <a href= "https://www.regionalstatistik.de/genesis/online?operation=statistic&levelindex=0&levelid=1651215646954&code=22543#abreadcrumb">Bayer. Landesamt für Statistik</a>
+SOURCE_TYPE: Jahresbericht Stadt Ingolstadt, Amt für Kinderbetreuung und -bildung, jeweils 1.12. des Jahres
 
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
