--- a/meta/4-4.md
+++ b/meta/4-4.md
@@ -9,7 +9,7 @@ indicator_sort_order: 04-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Anzahl der integrativen Kindertageseinrichtungen
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,9 +18,9 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl der integrativen Kindertageseinrichtungen in Ingolstadt
 
-SOURCE_TYPE: "Amt für Kinderbetreuung und vorschulische Bildung"  # data source  
+SOURCE_TYPE: "Amt für Kinderbetreuung und -Bildung"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Von 120 Kita-Einrichtungen sind 8 integrative Einrichtungen. Integrative Plätze werden auch in vielen anderen Einrichtungen im Verhältnis 1 zu 3 vergeben.  Im Jahr 2021 wurden 168 I-Kinder in 52 nicht integrativen  Einrichtungen betreut. <br>
+Der Indikator gibt die Anzahl der Einrichtungen an, die laut Betriebserlaubnis als integrative Einrichtung geführt werden. Es gibt eine große Anzahl an Kindertageseinrichtungen mit einer regulären Betriebserlaubnis, die Eingliederungshilfen / integrative Maßnahmen für die betreuten Kinder über den Bezirk Oberbayern anbieten und Inklusion möglich machen. Diese sind hier nicht aufgeführt.  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
