--- a/meta/4-5.md
+++ b/meta/4-5.md
@@ -9,20 +9,20 @@ indicator_sort_order: 04-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl Kinder zwischen 0 und 3 Jahre in öff. Tageseinrichtungen
+computation_units: Anzahl der Kinder
 data_start_values:  # initialize the field to be shown  
- - field: Kinder zwischen 0 und 3 Jahre 
+ - field: Herkunft 
    value: gesamt
- - field: Kinder zwischen 0 und 3 Jahre 
-   value: mit ausl. Elternteil
- - field: Kinder zwischen 0 und 3 Jahre 
-   value: ohne ausl. Elternteil    
+ - field: Herkunft 
+   value: mit Migrationshintergrund
+ - field: Herkunft
+   value: ohne Migrationshintergrund
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anzahl Kinder zwischen 0 und 3 Jahre in öff. Tageseinrichtungen
+computation_definitions: Anzahl der Kinder in öff. Kindertageseinrichtungen insgesamt und mit / ohne  Migrationshintergrund (zwischen 3 und unter 6 Jahre) in städtischer Trägerschaft
 
-SOURCE_TYPE: <a href= "https://www.statistik.bayern.de/produkte/statistik_kommunal/index.html">Bayer. Landesamt für Statistik</a>  # data source  
+SOURCE_TYPE: Jahresbericht Stadt Ingolstadt, Amt für Kinderbetreuung und -bildung # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -33,7 +33,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikator zeigt die Anzahl der Kinder zwischen 0 und 3 Jahre in öff. Tageseinrichtungen an.<br>
+Der Indikator zeigt die Anzahl der Kinder in öff. Kindertageseinrichtungen insgesamt und mit / ohne  Migrationshintergrund (zwischen 3 und unter 6 Jahre) an.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
