--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -29,8 +29,8 @@
 4-2-title: Aus- und Weiterbildungsangebote für städtische Mitarbeitende
 4-3-title: Betreuung von Kindern zwischen 0 und 3 Jahre in öff. Kindertageseinrichtungen (städtische Trägerschaft)
 4-4-title: Integrative Kindertageseinrichtungen
-4-5-title: Kinder in öff. Tageseinrichtungen
-4-6-title: Personal in öffentlich geförderter Kindertagespflege
+4-5-title: Betreuung von Kindern zwischen 3 und 6 Jahre in öff. Kindertageseinrichtungen (städtische Trägerschaft)
+4-6-title: Anstellungsschlüssel in öff. geförderter Kinderbetreuung
 4-7-title: Schulabbrecherquote 
 4-8-title: Teilnehmerzahl Erwachsenenbildung
 4-9-title: Wohnungsnahe Grundversorgung - Grundschule
