--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -32,7 +32,7 @@
 4-5-title: Betreuung von Kindern zwischen 3 und 6 Jahre in öff. Kindertageseinrichtungen (städtische Trägerschaft)
 4-6-title: Anstellungsschlüssel in öff. geförderter Kinderbetreuung
 4-7-title: Schulabbrecherquote 
-4-8-title: Teilnehmerzahl Erwachsenenbildung
+4-8-title: Wohnungsnahe Grundversorgung - Kita
 4-9-title: Wohnungsnahe Grundversorgung - Grundschule
 
 5-1-title: Angebote für Vereinbarkeit von Beruf und Familie für städtische Mitarbeitende
